2013-02-22  Sancho Lerena <slerena@artica.es>

        * include/api.php: Added a single protection on DoS attacks. 

2013-02-22  Dario Rodriguez <dario@artica.es>

	* godmode/servers/manage_recontask_form.php: Changed interval combo
	input for new customizable combo.

2013-02-19  Ramon Novoa  <rnovoa@artica.es>

	* include/auth/ldap.php: Merged from trunk. Do not bind anonymously to
	  check whether the user exists.

2013-02-19  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora_modules.js: Fixed str_warning and
	str_critical assignation when apply a network_component

2013-02-12  Sancho Lerena <slerena@artica.es>

	* extensions/update_manager/load_updatemanager.php
	extensions/update_manager/settings.php
	extensions/update_manager/main.php: removed binary system in 
	update manager. Removed two fields in setup and reformatted
	popup window on update info. This goes in 4.0.3 SP1.


2013-02-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components.php: cleaned source code
	style.
	
	* godmode/modules/manage_network_components_form_common.php: fixed
	the show types of module.

2013-02-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php: fixed the string graph.
	
	Fixes: #3601287

2013-02-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/styles/pandora_minimal.css,
	operation/agentes/stat_win.php: fixed the lost arrow to show the
	menu when Pandora is in other languages as spanish.

2013-02-06 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_template.php: fixed lost code from the
	some change in this file.
	
	Fixes: #3603548
	
	* operation/agentes/datos_agente.php,
	operation/agentes/estado_monitores.php: fixed source code style.

2013-02-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/estado_monitores.php,
	operation/agentes/datos_agente.php, godmode/setup/setup.php,
	include/functions_config.php: added the can disabled the command
	snapshot.
	